--- a/mystyle.css
+++ b/mystyle.css
@@ -7,8 +7,8 @@
     background-color: white;
     font-family: Source Sans Pro;
     grid-gap: 10px;
-    grid-template-columns: 10% 10% 10% auto 10%;
-    grid-template-rows: 75px 5% 10% auto 10% 50%;
+    grid-template-columns: 10% 150px 150px auto 10%;
+    grid-template-rows: 75px 60px 15px auto 25% 50%;
     border-width: 0px;
     border-top-width: 30px;
     border-bottom-width: 100px;
@@ -17,11 +17,36 @@
     padding: 0px;
 }
 
+.left-sidebar {
+    grid-area: 2 / 1 / 6 / 2;
+    background-color: #FF7400;
+    border-width: 15px;
+    border-style: black;
+    border-color: solid;
+}
+
+.right-sidebar {
+    grid-area: 2 / 5 / 6 / 6;
+    background-color: #FF7400;
+    border-width: 5px;
+    border-color: black;
+
+}
+
+/* This can set a background color */
+
+.content-container {
+    grid-area: 1 / 2 / 7 / 5;
+    background-color: white;
+}
+
 .name {
     grid-row: 1;
     grid-column: 2 / span 3;
+    background-color: white;
     font-family: Source Sans Pro;
     font-weight: normal;
+    text-transform: capitalize;
     border-width: 0px;
     border-bottom-width: 15px;
     border-style: solid;
@@ -33,14 +58,18 @@
 .navbar a {
     display: block;
     text-align: center;
+    text-transform: uppercase;
     padding: 15px;
 }
 
 .navbar {
     grid-column: 2;
     grid-row: 2 / span 3;
-    background-color: #EEEEEE;
+    background-color: white;
+    border-color: black;
     border-top-style: solid;
+    border-top-width: 4px;
+    border-bottom-style: solid;
     border-top-width: 4px;
     border-right-style: solid;
     border-right-width: 2px;
@@ -74,9 +103,13 @@
 
 p {
     padding: 0px;
-    margin-bottom: 30px;
+    border-top-style: solid;
+    border-top: 15px;
+    border-color: #FF7400;
+    margin: 0px;
     text-indent: 40px;
-    grid-row: 3;
+    text-align: justify;
+    grid-row: 4;
     grid-column: 3 / span 2;
 }
 
@@ -87,36 +120,25 @@ p {
 
 .inactive-tab {
     color: black;
-    border: 0px;
     text-decoration: none;
-    padding-bottom: 0px;
-    margin: 0px;
 }
 
 .active-tab {
     background-color: blue;
     color: white;
-    border: 0px;
     text-align: center;
     text-decoration: none;
-    margin: 0px;
-    padding-bottom: 0px;
 }
 
 .inactive-tab:hover,
 .external-item:hover {
-    background-color: orange;
-    font-weight: bold;
-    margin: 0px;
-}
-
-a:hover {
-    font-weight: bold;
+    background-color: #FF7400;
+    padding-left: 20px;
 }
 
 .footer {
-    background-color: white;
-    grid-row: 6;
+    grid-row: 5;
     grid-column: 2 / span 3;
+    font-size: 20px;
     padding: 0px;
 }
